cilium/CiliumClusterwideNetworkPolicy-allow-kubedns-ingress-cluster.yaml
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: allow-kubedns-ingress-cluster
spec:
  endpointSelector:
    matchLabels:
      k8s-app: kube-dns
      k8s:io.kubernetes.pod.namespace: kube-system
  ingress:
    - fromEndpoints:
        - {}
      toPorts:
        - ports:
            - port: "53"
              protocol: UDP
